[FIXED] Section overflow problem fixed #1
fullpage.js의 옵션 중 responsiveHeight 옵션을 추가하고,
skills 섹션과 work 섹션의 왼쪽 높이를 섹션 전체 높이를 읽어 자바스크립트로 부여
섹션간의 겹쳐보이는 현상을 없애기 위해 background 투명성을 없애고 #043d71 값을 줌

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem 3rem;
+  background: #20353f;
 }
 
 .header .fas {
@@ -227,13 +228,13 @@ body {
 .section .works__left,
 .section .contact__left {
   width: 30%;
-  height: 100%;
+  height: 100vh;
   padding: 6rem 3rem;
   text-align: left;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.3);
+  background: #043d71;
 }
 
 .skill__title,
